--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   get: ^4.3.8
-  animations: ^2.0.1
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
   syncfusion_flutter_sliders: ^19.3.44
+  animated_widgets: ^1.1.0
+  delayed_display: ^2.0.0
+  animate_do: ^2.0.0
 
 dev_dependencies:
   flutter_test:
